src/styles/_usersGroups.scss
@import "components/imports";
.usersGroups {
  @include media-breakpoint-down($desktop-breakpoint) {
    padding-top: 25px;
  }
  .viewSettings {
    padding-bottom: 25px;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-between;
    @include media-breakpoint-down($desktop-breakpoint) {
      // margin-top: 15px;
      margin: 0 10px;
    }
  }
  .buttonWrapper {
    display: flex !important;
    justify-content: flex-end;
  }
  .openMenuButton {
    display: block;
    margin: 5px 0;
    margin-right: 7px;
    cursor: pointer;
  }
  .sortLabel {
    display: flex;
    align-items: center;
    margin-right: 10px;
    font-weight: 500;
    color: #909598;
  }
  .explore {
    @include media-breakpoint-down($desktop-breakpoint) {
      background-color: transparent;
      box-shadow: none;
      padding-left: 10px;
      padding-right: 10px;
    }
    .groups {
      @include media-breakpoint-down($desktop-breakpoint) {
        grid-gap: 50px;
      }
    }
  }
}

.groupItem {
  position: relative;
  background-color: $white;
  overflow: hidden;
  border-radius: 10px;

  &-header {
    width: 100%;
    height: 250px;
    display: flex;
    @include media-breakpoint-down($desktop-breakpoint) {
      flex-flow: column nowrap;
      height: auto;
    }

    .header-image {
      width: 30%;
      height: auto;
      object-fit: cover;
      @include media-breakpoint-down($desktop-breakpoint) {
        width: 100%;
        height: 250px;
      }
    }
    .header-content {
      width: 70%;
      padding: 20px;
      display: flex;
      flex-flow: column nowrap;
      align-items: center;
      @include media-breakpoint-down($desktop-breakpoint) {
        width: 100%;
        height: auto;
        padding: 20px 5px;
      }
      &-settings {
        margin-top: auto;
        width: 100%;

        .actions {
          display: flex;
          align-items: center;
          @include media-breakpoint-down($desktop-breakpoint) {
            flex-flow: column nowrap;
            align-items: flex-start;
          }

          &__btn {
            display: flex;
            align-items: center;
            margin-left: 15px;
            @include media-breakpoint-down($desktop-breakpoint) {
              margin: 5px 20px;
            }
          }
        }
        .delete-card {
          margin-left: auto;
          @include media-breakpoint-down($desktop-breakpoint) {
            margin-left: 0;
            position: absolute;
            left: 5px;
            top: 18px;
          }
        }
        .members {
          cursor: pointer;
        }
        @include media-breakpoint-down($desktop-breakpoint) {
          margin-top: 20px;
          margin-right: 10px;
        }
        .actions__btn {
          cursor: pointer;
          &.hover-highlight {
            &:hover {
              color: $primary-color;
            }
          }
        }
      }
      &-joinGroupContainer {
        margin-top: auto;
        @include media-breakpoint-down($desktop-breakpoint) {
          margin-top: 20px;
        }
      }
      &-groupMemberContainer {
        margin-top: auto;
        .btn {
          margin: 0 10px;
        }
        @include media-breakpoint-down($desktop-breakpoint) {
          margin-top: 20px;
          display: flex;
          flex-flow: column nowrap;
          .btn {
            margin: 5px 0;
          }
        }
      }
      &-editButton {
        position: absolute;
        top: 25px;
        right: 25px;
        color: $secondary-color;
        cursor: pointer;
      }
    }
  }
}

.groupMembersModal {
  .searchHeader {
    margin-bottom: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .title__empty {
    margin-top: 30px;
    opacity: 0.5;
  }
  .popup-alert__body {
    .list {
      height: 350px;
      overflow: auto;
      padding: 0 10px;
    }
    .item {
      display: flex;
      flex-flow: row nowrap;
      align-items: center;
      margin: 15px 0;
    }
  }
  .table__cell {
    &.index {
      flex-basis: 30px;
    }
    &.user {
      flex-grow: 1;
    }
    &.spent {
      flex-basis: 100px;
    }
    &.delete {
      margin-left: auto;
    }
  }
  &.popup-alert {
    max-width: 620px;
  }
}
.GroupsGroupMessages {
  &.popup {
    &-container {
      @include media-breakpoint-down($desktop-breakpoint) {
        margin-left: 10px;
        margin-right: 10px;
      }
      .popup__content {
        @include media-breakpoint-down($desktop-breakpoint) {
          padding-top: 20px;
        }
        .datetime-value {
          .post-datetime__value {
            line-height: 20px;
          }
          .datetime-value__reset {
            top: -2px;
          }
        }
      }
    }
  }
}
.SubscribersGroupMessages,
.GroupsGroupMessages {
  &.popup-container.popup-massmes {
    @include media-breakpoint-down($desktop-breakpoint) {
      overflow: visible;
    }
  }
}

