FIX: timepicker visible

--- a/src/styles/_usersGroups.scss
+++ b/src/styles/_usersGroups.scss
@@ -222,6 +222,13 @@
       }
     }
   }
+
+  .popup & {
+
+    .content {
+      overflow: visible;
+    }
+  }
 }
 .SubscribersGroupMessages,
 .GroupsGroupMessages {
